new pseudo added

--- a/pseoudo_class.html
+++ b/pseoudo_class.html
@@ -23,5 +23,25 @@
         <li>manik</li>
         <li>sagor</li>
     </ul>
+    <a href="https://web.facebook.com/hasan001122">facebook</a>
+    <br>
+    <a href="https://www.youtube.com/">youtube</a>
+
+    <!-- pseudo element -->
+    <section>
+        <h1 class="element">barcelona</h1>
+        <h1 class="element">real-madrid</h1>
+        <h1 class="element">athletic madrid</h1>
+
+       <p>raju</p>
+       <p>naim</p>
+       <p>sagor</p>
+       <p>moin</p>
+       <p>rajib</p>
+
+   </section>
+   
+
+
 </body>
 </html>
